--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     />
 
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <script src="/assets/js/app.js" type="modul"></script>
+    <script src="/assets/js/app.js" type="module"></script>
   </head>
 
   <body>
-    <section class="cup-container"></section>
+    <h2>Bordtennis</h2>
+    <div class="cup-container bordtennis-container"></div>
   </body>
 </html>
