--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 
   <body>
     <h2>Bordtennis</h2>
-    <div class="cup-container bordtennis-container"></div>
+    <div class="cup-container"></div>
   </body>
 </html>
