--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -25,7 +25,19 @@
   </head>
 
   <body>
-    <h2>Bordtennis</h2>
+    <h2>Bordtennis Turnering</h2>
+
+    <!-- Bowl container for contestant names -->
+    <div class="bowl-container">
+      <h3>Bowl</h3>
+      <div class="bowl"></div>
+    </div>
+
+    <!-- Buttons to control the generation -->
+    <button id="generate-btn">Generate</button>
+    <button id="reset-btn">Reset</button>
+
+    <!-- Container where matches will be shown -->
     <div class="cup-container"></div>
   </body>
 </html>
