--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <!-- Bowl container for contestant names -->
     <div class="bowl-container">
-      <h3>Bowl</h3>
       <div class="bowl"></div>
     </div>
 
-    <!-- Buttons to control the generation -->
-    <button id="generate-btn">Generate</button>
-    <button id="reset-btn">Reset</button>
+    <div class="btn-container">
+      <button id="generate-btn">Træk lod</button>
+      <button id="reset-btn">Nulstil</button>
+    </div>
 
     <!-- Container where matches will be shown -->
     <div class="cup-container"></div>
