--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
   <body>
     <h2>Bordtennis Turnering</h2>
 
-    <!-- Bowl container for contestant names -->
     <div class="bowl-container">
       <div class="bowl"></div>
     </div>
 
     <div class="btn-container">
-      <button id="generate-btn">Træk lod</button>
+      <button id="generate-btn">Træk modstander</button>
       <button id="reset-btn">Nulstil</button>
     </div>
 
-    <!-- Container where matches will be shown -->
     <div class="cup-container"></div>
   </body>
 </html>
