--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
       <button id="reset-btn">Nulstil</button>
     </div>
 
-    <div class="cup-container"></div>
+    <div class="tournament-container"></div>
   </body>
 </html>
